Fixed header nav spacing

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -77,7 +77,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 32px 0 35px;
+      padding: 20px 0;
     }
   }
 
@@ -1263,7 +1263,7 @@ input[type="number"] {
   .heir {
 
     &__header-container {
-      padding: 20px 0;
+      padding: 15px 0;
     }
 
     &__header,
